<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="20dp">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:text="@string/title_interest"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="#000000"
        android:textSize="35sp"
        android:textStyle="bold" />


    <CheckBox
        android:id="@+id/checkHidrantes"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="40dp"
        android:text="@string/hydrant"
        android:textColor="#000000"
        android:textSize="20sp" />

    <CheckBox
        android:id="@+id/checkColegios"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="10dp"
        android:text="@string/college"
        android:textColor="#000000"
        android:textSize="20sp" />

    <CheckBox
        android:id="@+id/checkComisarias"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="10dp"
        android:text="@string/commissioner"
        android:textColor="#000000"
        android:textSize="20sp" />

    <CheckBox
        android:id="@+id/checkGrifos"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="10dp"
        android:text="@string/fuel"
        android:textColor="#000000"
        android:textSize="20sp" />

    <CheckBox
        android:id="@+id/checkBomberos"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="10dp"
        android:text="@string/fireman"
        android:textColor="#000000"
        android:textSize="20sp" />

    <CheckBox
        android:id="@+id/checkHospitales"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="10dp"
        android:text="@string/hospital"
        android:textColor="#000000"
        android:textSize="20sp" />

</LinearLayout>