<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/cream_can"
    android:gravity="center"
    android:orientation="vertical"
    android:weightSum="1">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="110dp"
        android:layout_gravity="center_horizontal|top"
        android:layout_marginTop="100dp"
        android:layout_weight="0.07"
        android:gravity="center"
        android:text="@string/login"
        android:textSize="65sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/btnLogin"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:layout_gravity="center_horizontal|bottom"
        android:layout_marginBottom="80dp"
        android:background="@drawable/selector_btn_login"
        android:onClick="ingresarCuenta"
        android:text="@string/ingresar"
        android:textColor="@color/white"
        android:textSize="20sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="vertical">

        <EditText
            android:id="@+id/txtUser"
            android:layout_width="400dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="50dp"
            android:ems="10"
            android:hint="@string/usuario"
            android:inputType="textEmailAddress"
            android:textColor="@color/black"
            android:textSize="20sp"/>

        <EditText
            android:id="@+id/txtPass"
            android:layout_width="400dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="50dp"
            android:ems="10"
            android:hint="@string/contraseña"
            android:inputType="textPassword"
            android:textColor="@color/black"
            android:textSize="20sp"/>


    </LinearLayout>


</FrameLayout>